<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

        <EditText
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/name_hint"
                android:ems="10"
                android:id="@+id/nameEditText"/>

        <EditText
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint"
                android:ems="10"
                android:id="@+id/newEmailEditText"/>

        <EditText
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password_hint"
                android:ems="10"
                android:id="@+id/newPasswordEditText"/>

        <EditText
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/confirm_password_hint"
                android:ems="10"
                android:id="@+id/confirmPasswordField"/>

        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/progressBar"
                android:visibility="invisible"/>

        <Button
                android:text="@string/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onSignUp"
                android:id="@+id/signUpBtn"/>
    </LinearLayout>
</ScrollView>
