<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
                android:id="@+id/button_add_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="showNoteText"
                android:text="@string/contribute_add_notes" />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_text_note"
                    android:visibility="gone"
                    android:hint="@string/contribute_note_hint"
                    />

            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/is_note_private"
                    android:text="@string/contribute_is_private"
                    android:textSize="24sp"
                    android:visibility="gone"
                    />

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_submit_note"
                    android:text="@string/contribute_submit"
                    android:visibility="gone"
                    android:onClick="preSubmitNote"
                    />

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="showPictureFields"
                android:text="@string/contribute_add_pictures"
                />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_picture_hint"
                    android:id="@+id/choose_picture_hint_text"
                    android:visibility="gone"
                    />

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:id="@+id/picture_view"
                    android:layout_margin="15dp"
                    android:onClick="choosePicture"
                    android:visibility="gone"/>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    android:text="Submit"
                    android:onClick="preSubmitPicture"
                    android:id="@+id/picture_submit_btn"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contribute_add_videos"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/button_add_youtube_links"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff0000"
            android:onClick="showYoutubeLinks"
            android:text="+ YOUTUBE VIDEOS" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_youtube_link"
            android:visibility="gone"
            android:hint="Paste your YOUTUBE link here"
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/is_note_private2"
            android:text="@string/contribute_is_private"
            android:textSize="24sp"
            android:visibility="gone"
            />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_submit_youtube_link"
            android:text="Submit!"
            android:visibility="gone"
            android:onClick="preSubmitYoutubeLink"
            />


        <Button
            android:id="@+id/button_invite_friends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showInviteFriends"
            android:text="Invite Friends!" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text_invite_friend"
            android:visibility="gone"
            android:hint="Type your friend's email address."
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_invite_friend"
            android:visibility="gone"
            android:onClick="inviteFriend"
            android:text="Send invite!"/>


        <Button
            android:id="@+id/button_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="finishContributing"
            android:text="Finish" />


    </LinearLayout>

</ScrollView>