<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        tools:context=".LoginActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:srcCompat="@drawable/logo"
                android:id="@+id/imageView"
                android:contentDescription="Logo"/>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:fontFamily="@font/days_one"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:fontFamily="@font/days_one"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <LinearLayout
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

            <Button
                android:id="@+id/signUpBtn"
                style="@android:style/Widget.Material.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/days_one"
                android:onClick="onClick"
                android:text="@string/sign_up"
                android:textSize="18sp" />

            <Button
                android:id="@+id/loginBtn"
                style="@android:style/Widget.Material.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/days_one"
                android:onClick="onClick"
                android:text="@string/login"
                android:textSize="18sp" />

        </LinearLayout>

        <Button
            android:id="@+id/googleSignInBtn"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="383dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorRed"
            android:fontFamily="@font/days_one"
            android:onClick="onClick"
            android:text="@string/google_sign_in"
            android:textSize="18sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.Material.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:visibility="invisible" />

    </LinearLayout>
</ScrollView>
